--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@picocss/pico": "^2.0.6",
     "@supabase/supabase-js": "^2.45.2",
     "creatorverse": "file:",
     "dotenv": "^16.4.5",
